# kanban

./: .gitignore  CLAUDE.md  discussion_log.md  kanban.code-workspace  meeting_summary.md
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: user_preferences.md
backend/: README.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py  deps.py
backend/app/api/: __init__.py  auth.py  columns.py  comments.py  projects.py  tasks.py  users.py
backend/app/models/: __init__.py  column.py  comment.py  database.py  project.py  task.py  user.py
backend/app/schemas/: __init__.py  column.py  comment.py  project.py  task.py  user.py
backend/app/services/: __init__.py  auth.py  column.py  comment.py  project.py  rate_limiter.py  task.py  token_blacklist.py
backend/app/utils/: security.py
backend/migrations/: 001_add_task_detail_fields.py  002_add_user_role_field.py
backend/tests/: test_auth.py  test_columns.py  test_comments.py  test_projects.py  test_services.py  test_task_filter.py  test_tasks.py  test_users.py
data/: .gitkeep
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html
openspec/: AGENTS.md  project.md
scripts/: chrome-devtools-debug.bat  start-dev.bat  start-dev.sh  test-auth.bat  test-auth.sh  test-drag-sort.bat  test-drag-sort.sh  test-kanban.bat  test-kanban.sh  test-polling-comments-search.bat  test-polling-comments-search.sh  test-task-detail.bat  test-task-detail.sh  test-user-role.bat  test-user-role.sh
(+82 files in other folders)
